; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/platform/olpc/extr_olpc-xo1-sci.c_detect_lid_state.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/platform/olpc/extr_olpc-xo1-sci.c_detect_lid_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OLPC_GPIO_LID = common dso_local global i32 0, align 4
@GPIO_READ_BACK = common dso_local global i32 0, align 4
@lid_inverted = common dso_local global i32 0, align 4
@lid_open = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @detect_lid_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @detect_lid_state() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @OLPC_GPIO_LID, align 4
  %3 = load i32, i32* @GPIO_READ_BACK, align 4
  %4 = call i32 @cs5535_gpio_isset(i32 %2, i32 %3)
  store i32 %4, i32* %1, align 4
  %5 = load i32, i32* %1, align 4
  %6 = icmp ne i32 %5, 0
  %7 = xor i1 %6, true
  %8 = zext i1 %7 to i32
  %9 = load i32, i32* @lid_inverted, align 4
  %10 = icmp ne i32 %9, 0
  %11 = xor i1 %10, true
  %12 = zext i1 %11 to i32
  %13 = xor i32 %8, %12
  store i32 %13, i32* @lid_open, align 4
  %14 = load i32, i32* %1, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %0
  br label %19

17:                                               ; preds = %0
  %18 = call i32 (...) @flip_lid_inverter()
  br label %19

19:                                               ; preds = %17, %16
  ret void
}

declare dso_local i32 @cs5535_gpio_isset(i32, i32) #1

declare dso_local i32 @flip_lid_inverter(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
